# ulam

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.sample.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake  prelude.cmake  variables.cmake
source/: main.cpp  sieve.hpp  write_png.cpp  write_png.hpp
